xupnpd: update to rev382, remove dynamic m3u feeds from git

--- a/trunk/user/xupnpd/src/ui/ui_config.html
+++ b/trunk/user/xupnpd/src/ui/ui_config.html
@@ -22,7 +22,7 @@
 <br/>
 
 <div class="controls controls-row">
-<div class="span4">YouTube quality:</div>
+<div class="span4">Maximum YouTube quality:</div>
 <select class="span4" class="span4" name=youtube_fmt id=youtube_fmt>
 <option value=18>360p</option>
 <option selected value=22>720p</option>
