xupnpd: update to rev395

--- a/trunk/user/xupnpd/src/ui/ui_config.html
+++ b/trunk/user/xupnpd/src/ui/ui_config.html
@@ -63,6 +63,14 @@
 </div>
 
 <div class="controls controls-row">
+<div class="span4">Vimeo quality:</div>
+<select class="span4" name=vimeo_fmt id=vimeo_fmt>
+<option value="sd">Low</option>
+<option selected value="hd">High</option>
+</select>
+</div>
+
+<div class="controls controls-row">
 <div class="span4">Vimeo maximum videos:</div><input type=text class="span4" name=vimeo_video_count id=vimeo_video_count>
 </div>
 
@@ -153,6 +161,10 @@
 <option selected value="false">no</option>
 <option value="true">yes</option>
 </select>
+</div>
+
+<div class="controls controls-row">
+<div class="span4">DLNA Subscribe TTL:</div><input class="span4" type=text name=dlna_subscribe_ttl id=dlna_subscribe_ttl>
 </div>
 
 <div class="controls controls-row">
