transmission web control: hide link to original UI

--- a/trunk/user/transmission/transmission-control/web/index.html
+++ b/trunk/user/transmission/transmission-control/web/index.html
@@ -42,7 +42,7 @@
 						<!-- 切换到移动版 -->
 						<a id="toolbar_mobile" href="javascript:location.href = 'index.mobile.html';" class="easyui-linkbutton" data-options="iconCls:'icon-mobile',plain:true" system-tip-lang="toolbar.tip['ui-mobile']"><label system-lang="toolbar['ui-mobile']"></label></a>
 						<span class="button-split">|</span>
-						<!-- 切换到原版 -->
+						<!-- 切换到原版 --
 						<a id="" href="javascript:location.href = 'index.original.html';" class="easyui-linkbutton" data-options="iconCls:'icon-transmission',plain:true" system-tip-lang="toolbar.tip['ui-original']"><label system-lang="toolbar['ui-original']"></label></a>
 						<span class="button-split">|</span>
 						<!-- 关于 -->
