--- a/trunk/user/aria2/ariaweb/index.html
+++ b/trunk/user/aria2/ariaweb/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 
 <!-- {{{ head -->
@@ -11,9 +11,9 @@
 
   <title ng-bind="$root.pageTitle">Aria2 WebUI</title>
 
-    <link rel="stylesheet" href="css/aria2web.min.css">
+  <link rel="stylesheet" href="css/aria2web.min.css">
 
-<!-- external javascript dependencies -->
+  <!-- external javascript dependencies -->
   <script src="js/aria2web.min.js"></script>
   <script src="configuration.js"></script>
 </head>
@@ -168,7 +168,7 @@
               <a
                       ng-click="changeLanguage('ru_RU')"
                       href="#"><span class="fa fa-fw flag-icon flag-icon-ru">&nbsp;</span> Русский</a>
-            </li>			
+            </li>
           </ul>
         </li>
       </ul>
@@ -448,7 +448,7 @@
         <ul class="stats pull-left" ng-switch-when="paused">
           <!-- {{{ paused download statistics -->
           <li class="label label-info">
-            <span title="{{ 'Download Status' | translate }}"><span class="fa fa-fw fa-pause">&nbsp;</span> {{download.status}}</span>
+            <span title="{{ 'Download status' | translate }}"><span class="fa fa-fw fa-pause">&nbsp;</span> {{download.status}}</span>
           </li>
 
           <li class="label label-info">
@@ -491,7 +491,7 @@
           <!-- {{{ complete download statistics -->
 
           <li class="label label-success">
-            <span title="{{ 'Download Status' | translate }}"><span class="fa fa-fw fa-check-square-o">&nbsp;</span> {{download.status}}</span>
+            <span title="{{ 'Download status' | translate }}"><span class="fa fa-fw fa-check-square-o">&nbsp;</span> {{download.status}}</span>
           </li>
 
           <li class="label label-success">
@@ -508,7 +508,7 @@
         <ul class="stats pull-left" ng-switch-when="removed">
           <!-- {{{ removed download statistics -->
           <li class="label label-warning">
-            <span title="{{ 'Download Status' | translate }}"><span class="fa fa-fw fa-times">&nbsp;</span> {{download.status}}</span>
+            <span title="{{ 'Download status' | translate }}"><span class="fa fa-fw fa-times">&nbsp;</span> {{download.status}}</span>
           </li>
 
           <li class="label label-warning">
@@ -553,7 +553,7 @@
             <canvas bitfield="download.bitfield" draw="!download.collapsed" pieces="download.numPieces" class="progress chunk-canvas" width="1400" chunkbar></canvas>
           </div>
           <ul class="stats download-item">
-            <li class="label label-default" title="{{ 'Estimated Time' | translate }}"><i class="fa fa-fw fa-clock-o">&nbsp;</i> <span class="download-eta">{{getEta(download) | time}}</span></li>
+            <li class="label label-default" title="{{ 'Estimated time' | translate }}"><i class="fa fa-fw fa-clock-o">&nbsp;</i> <span class="download-eta">{{getEta(download) | time}}</span></li>
             <li class="label label-default" title="{{ 'Download Size' | translate }}"><i class="fa fa-fw fa-cloud-download">&nbsp;</i> <span class="download-totalLength">{{download.fmtTotalLength}}</span></li>
             <li class="label label-default" title="{{ 'Downloaded' | translate }}"><i class="fa fa-fw fa-download">&nbsp;</i> <span class="download-completedLength">{{download.fmtCompletedLength}}</span></li>
             <li class="label label-default" title="{{ 'Download Speed' | translate }}"><i class="fa fa-fw fa-arrow-circle-o-down">&nbsp;</i> <span class="download-downloadSpeed">{{download.fmtDownloadSpeed}}</span></li>
@@ -693,7 +693,7 @@ http://ex1.com/f2.mp4 http://ex2.com/f2.mp4 --out=file2.mp4
       <p class="help-block">
     {{ '- Select the torrent from the local filesystem to start the download.' | translate }}<br />
     {{ '- You can select multiple torrents to start multiple downloads.' | translate }}<br />
-    {{ '- To add a BitTorrent-Magnet URL, use the add URI option and add it there.' | translate }}
+    {{ '- To add a BitTorrent-Magnet URL, use the Add By URI option and add it there.' | translate }}
       </p>
       <div class="form-horizontal form-group">
         <label class="control-label" style="text-align: left;"><b>{{ 'Select a Torrent' | translate }}:</b></label>
@@ -989,7 +989,7 @@ http://ex1.com/f2.mp4 http://ex2.com/f2.mp4 --out=file2.mp4
               ng-model="connection.conf.directURL"/>
             <p class="help-block">
               {{ 'If supplied, links will be created to enable direct download from the Aria2 server.' | translate }}<br />
-              {{ '(Requires an appropriate webserver to be configured.)' | translate }}
+              {{ '(Requires appropriate webserver to be configured.)' | translate }}
             </p>
           </div>
         </div>
@@ -1040,7 +1040,7 @@ http://ex1.com/f2.mp4 http://ex2.com/f2.mp4 --out=file2.mp4
         {{ 'To download the latest version of the project, add issues or to contribute back, head on to' | translate }}:<br />
         <a href="https://github.com/ziahamza/webui-aria2">http://github.com/ziahamza/webui-aria2</a>
         <br /><br />
-        {{ 'Or you can open the latest version in browser through' | translate }}:<br />
+        {{ 'Or you can open the latest version in the browser through' | translate }}:<br />
         <a href="http://ziahamza.github.io/webui-aria2">http://ziahamza.github.io/webui-aria2</a>
       </p>
   </div>
